# ChestX-TB

./: .gitignore  README.md  data_augmentation.py  download.py  main.py  pyproject.toml  requirements.txt  train.ipynb
resnet18/: train.py
resnetv2/: train.py
src/resnet18/: test.ipynb  train.py  train_v2.ipynb
src/resnetv2/: train.ipynb  train.py
src/vgg11/: train.ipynb  train.py  train_v2.ipynb
