[project]
name = "chestx-tb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "timm>=1.0.15",
    "torch>=2.7.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.22.0",
]
